lo anterior solucionado, empezando UPDATE con routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     <div class="col-xs-12">
       <app-header></app-header>
       <!--<app-fruits></app-fruits>-->
-      <app-fruits-add></app-fruits-add>
+      <!--<app-fruits-add></app-fruits-add>-->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
