--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand"> Fruit List
+      <a routerLink="/home" routerLinkActive="active" class="navbar-brand"> Fruit List
         <span class="glyphicon glyphicon-apple"></span>
       </a>
     </div>
