hecho sin fallo en el update, ya no actualiza la fruta que no es igual su nombre

--- a/src/app/fruits-add/fruits-add.component.html
+++ b/src/app/fruits-add/fruits-add.component.html
@@ -77,7 +77,7 @@
           Delete
         </button>
         <button style="float: right"
-                (click)="onUpdateFruitDB(petFruta.idFruit)">
+                (click)="onUpdateFruitDB(j, petFruta.idFruit)">
           Update
         </button>
         <!--<button [routerLink]="['/update-fruit', petFruta.idFruit]" routerLinkActive="active"-->
