--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,11 @@
 
   <div class="container-fluid">
     <div class="navbar-header">
-      <a routerLink="/home" routerLinkActive="active" class="navbar-brand"> Fruit List
+      <a routerLink="/list-fruit" routerLinkActive="active" class="navbar-brand"> Fruit List
         <span class="glyphicon glyphicon-apple"></span>
       </a>
+      <li><a routerLink="/list-fruit" routerLinkActive="active"> Listado de frutas </a></li>
+      <li><a routerLink="/edit-fruit" routerLinkActive="active"> Agregar fruta </a></li>
     </div>
   </div>
 </nav>
