--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-header></app-header>
-      <!--<app-fruits></app-fruits>-->
-      <!--<app-fruits-add></app-fruits-add>-->
+      <app-header (featureSelected)="onNavigate($event)"></app-header>
       <router-outlet></router-outlet>
     </div>
   </div>
