--- a/src/app/fruits-list/fruits-list.component.html
+++ b/src/app/fruits-list/fruits-list.component.html
@@ -6,11 +6,12 @@
   <div class="col-xs-10">
     <ul class="list-group">
       <!--<a routerLink="/edit-fruit/:id" routerLinkActive="active" class="list-group-item"-->
-      <a a routerLink="/edit-fruit/:id" routerLinkActive="active" class="list-group-item"
-         (click)="onSelected()"
-         *ngFor = "let petFruta of petFrutas; let j = index">
-        {{petFruta.name}} ({{petFruta.pricePerKg}})
-        <button (click)="onRemoveFruitDB(j,petFruta.idFruit)" style="float: right">
+      <a *ngFor = "let fruta of frutas; let j = index"
+         (click)="onSelect(fruta)"
+         class="list-group-item"
+         >
+        {{fruta.name}} ({{fruta.pricePerKg}})
+        <button (click)="onRemoveFruitDB(j,fruta.idFruit)" style="float: right">
           Delete
         </button>
       </a>
