final con llamadas al service

--- a/src/app/fruits-list/fruits-list.component.html
+++ b/src/app/fruits-list/fruits-list.component.html
@@ -13,4 +13,6 @@
     </ul>
   </div>
 </div>
+<br>
+<button class="btn btn-success" routerLink="/edit-fruit" routerLinkActive="active">Agregar fruta</button>
 
